Angular conference code sample: bug fixes (#157)
Change log:

Unblocked "Speaker view" for MAC
Fixed change icon of animal, when switch "Grid view" to "Speaker view" and vice versa
Fixed our user must be at the top within "Speaker View"
Blocked full screen when user doesn`t send video stream
Fixed stream blinking(should be tested)
Fixed text overlaps the date within chat

--- a/videochat-conf-angular/src/app/components/stream-container/stream-container.component.scss
+++ b/videochat-conf-angular/src/app/components/stream-container/stream-container.component.scss
@@ -88,14 +88,19 @@
   }
 }
 
+.user-fullscreen {
+  position: absolute;
+  padding: 0;
+  top: 50px;
+  left: 10px;
+  background: transparent;
+  z-index: 5;
+}
+
 .fullscreen {
   border-radius: 50%;
   width: 20px;
   height: 20px;
-  position: absolute;
   padding: 5px;
-  top: 50px;
-  left: 10px;
-  z-index: 5;
   background: #C3002F;
 }
